Fixng CSS location

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Peng</title>
     <meta name="description"
         content="Discover the power of Pepe Penguin, a cryptocurrency designed for speed, low transaction fees">
-    <link rel="stylesheet" href="/css/main.css?v=2">
+    <link rel="stylesheet" href="./css/main.css?v=2">
 </head>
 
 <body>
@@ -212,9 +212,9 @@
             <div class="container">
                 <div class="tokens">
                     <h2>Moo Tokenomics</h2>
-                    <p><span style="color: #ffde68"></span></p><span><span
+                    <!-- <p><span style="color: #ffde68"></span></p><span><span
                             id="numbers">A3eME5CetyZPBoWbRUwY3tSe25S6tb18ba9ZPbWk9eFJ</span><button
-                            onclick="copy()">Copy</button></span>
+                            onclick="copy()">Copy</button></span> -->
                     <ul class="tokens__cards">
                         <li class="tokens__card"><img src="/assets/png/card1.png">
                             <div>
