--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Peng</title>
     <meta name="description"
         content="Discover the power of Pepe Penguin, a cryptocurrency designed for speed, low transaction fees">
-    <link rel="stylesheet" href="./css/main.css?v=2">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -146,7 +146,7 @@
             </div><img class="banner__transition" style="width: 100%" src="/assets/png/transition.png">
         </section>
         <section class="about" id="about">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="about__content">
                     <div class="about_text">
                         <div>
@@ -164,11 +164,11 @@
                         </div><img src="/assets/svg/elipse.svg">
                     </div><img src="/assets/png/about.png">
                 </div>
-            </div>
+            </div> -->
         </section>
         <section id="available" class="available"><img class="available__background"
                 src="/assets/svg/available-background.svg" alt>
-            <div class="available__container container">
+            <!-- <div class="available__container container">
                 <h2 class="available__title">Available on</h2>
                 <div class="available__items"><a class="available__item available__item_mexc"
                         href="https://www.mexc.com/exchange/PENG_USDT" target="_blank"><img src="/assets/svg/mexc.svg"
@@ -192,7 +192,7 @@
                         target="_blank"><img src="/assets/svg/jupiter.svg" alt> </a><a
                         class="available__item available__item_bingx" href="https://bingx.com/spot/PENGUSDT/"
                         target="_blank"><img src="/assets/svg/bingx.svg" alt></a></div>
-            </div>
+            </div> -->
         </section>
         <section id="available" class="available"><img class="available__background"
                 src="/assets/svg/available-background.svg" alt>
@@ -216,7 +216,7 @@
                             id="numbers">A3eME5CetyZPBoWbRUwY3tSe25S6tb18ba9ZPbWk9eFJ</span><button
                             onclick="copy()">Copy</button></span> -->
                     <ul class="tokens__cards">
-                        <li class="tokens__card"><img src="/assets/png/card1.png">
+                        <li class="tokens__card"><img src="assets/png/card1.png">
                             <div>
                                 <div>
                                     <p>TAXES</p>
@@ -224,7 +224,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="tokens__card"><img src="/assets/png/card2.png">
+                        <li class="tokens__card"><img src="assets/png/card2.png">
                             <div>
                                 <div>
                                     <p>MINT
@@ -234,7 +234,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="tokens__card"><img src="/assets/png/card3.png">
+                        <li class="tokens__card"><img src="assets/png/card3.png">
                             <div>
                                 <div>
                                     <p>liquidity</p>
@@ -242,7 +242,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="tokens__card"><img src="/assets/png/card4.png">
+                        <li class="tokens__card"><img src="assets/png/card4.png">
                             <div>
                                 <div>
                                     <p>total
