Removing partner sections

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="banner__bottom"><img class="snow_bg" src="/assets/svg/banner_elipse.svg"> <img class="snow"
                     src="/assets/svg/snow.svg"> <img class="ping" src="/assets/png/ping.png"> <img class="pinghand"
                     src="/assets/png/pinghand.png"></div>
-            <div class="_partners container">
+            <!-- <div class="_partners container">
                 <article class="partners">
                     <h2>Our partners</h2>
                 </article>
@@ -143,7 +143,7 @@
                     <li><a href="https://www.dextools.io/" target="_blank"><img src="/assets/svg/partner4.svg" alt></a>
                     </li>
                 </ul>
-            </div><img class="banner__transition" style="width: 100%" src="/assets/png/transition.png">
+            </div><img class="banner__transition" style="width: 100%" src="/assets/png/transition.png"> -->
         </section>
         <section class="about" id="about">
             <!-- <div class="container">
