Removing partner sections

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </section>
         <section id="available" class="available"><img class="available__background"
                 src="/assets/svg/available-background.svg" alt>
-            <div class="available__container container">
+            <!-- <div class="available__container container">
                 <h2 class="available__title">Partners</h2>
                 <div class="available__items"><a class="available__item available__item_hey-moon"
                         href="https://www.hellomoon.io/" target="_blank"><img src="/assets/svg/hey-moon.svg" alt> </a><a
@@ -206,7 +206,7 @@
                             src="/assets/svg/zebec.svg" alt> </a><a class="available__item available__item_hey-wallet"
                         href="https://heywallet.com/" target="_blank"><img src="/assets/svg/hey-wallet.svg" alt></a>
                 </div>
-            </div>
+            </div> -->
         </section>
         <section class="tokenomics" id="tokenomics">
             <div class="container">
