--- a/index.html
+++ b/index.html
@@ -196,17 +196,28 @@
         </section>
         <section id="available" class="available"><img class="available__background"
                 src="/assets/svg/available-background.svg" alt>
-            <!-- <div class="available__container container">
-                <h2 class="available__title">Partners</h2>
-                <div class="available__items"><a class="available__item available__item_hey-moon"
+            <div class="available__container container">
+                <h2 class="available__title">Moo's Galery</h2>
+                <div class="available__items">
+                    <!-- <a class="available__item available__item_hey-moon"
                         href="https://www.hellomoon.io/" target="_blank"><img src="/assets/svg/hey-moon.svg" alt> </a><a
                         class="available__item available__item_travala" href="https://www.travala.com/"
                         target="_blank"><img src="/assets/svg/travala.svg" alt> </a><a
                         class="available__item available__item_zebec" href="https://zebec.io/" target="_blank"><img
                             src="/assets/svg/zebec.svg" alt> </a><a class="available__item available__item_hey-wallet"
-                        href="https://heywallet.com/" target="_blank"><img src="/assets/svg/hey-wallet.svg" alt></a>
+                        href="https://heywallet.com/" target="_blank"><img src="/assets/svg/hey-wallet.svg" alt></a> -->
+                    <ul class="tokens__cards">
+                        <li class="tokens__card"><img src="assets/png/gallery1.png"></li>
+                        <li class="tokens__card"><img src="assets/png/gallery2.png"></li>
+                        <li class="tokens__card"><img src="assets/png/gallery3.png"></li>
+                        <li class="tokens__card"><img src="assets/png/gallery4.png"></li>
+                        <li class="tokens__card"><img src="assets/png/gallery5.png"></li>
+                        <li class="tokens__card"><img src="assets/png/gallery6.png"></li>
+                        <li class="tokens__card"><img src="assets/png/gallery7.png"></li>
+                        <li class="tokens__card"><img src="assets/png/gallery8.png"></li>                        
+                    </ul>
                 </div>
-            </div> -->
+            </div>
         </section>
         <section class="tokenomics" id="tokenomics">
             <div class="container">
